grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: kube-monitor
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  rules:
  - host: "grafana.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kube-grafana
            port: 
              number: 3000
