prom-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom-ingress
  namespace: kube-monitor
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  rules:
  - host: "prom.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kube-prometheus-prometheus
            port: 
              number: 9090
